--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "add-typing-final"
+name = "auto-typing-final"
 authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
 dependencies = ["ast-grep-py==0.24.0"]
 requires-python = ">=3.12"
@@ -15,10 +15,10 @@ classifiers = [
 dynamic = ["version"]
 
 [project.urls]
-repository = "https://github.com/vrslev/add-typing-final"
+repository = "https://github.com/vrslev/auto-typing-final"
 
 [project.scripts]
-add-typing-final = "add_typing_final.main:main"
+auto-typing-final = "auto_typing_final.main:main"
 
 [tool.uv]
 dev-dependencies = ["mypy==1.10.0", "pytest==8.2.2", "pytest-cov==5.0.0", "ruff==0.4.10"]
