--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
           path: ~/.cache/uv
           key: publish-${{ hashFiles('pyproject.toml') }}
       - uses: extractions/setup-just@v2
-      - run: curl -LsSf https://astral.sh/uv/0.2.11/install.sh | sh
+      - run: curl -LsSf https://astral.sh/uv/install.sh | sh
       - run: just publish
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
