--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "auto-typing-final"
 authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
-dependencies = ["ast-grep-py==0.24.1"]
+dependencies = ["ast-grep-py==0.24.1", "pygls==1.3.1"]
 requires-python = ">=3.12"
 readme = "README.md"
 license = { text = "MIT" }
@@ -19,6 +19,7 @@ repository = "https://github.com/vrslev/auto-typing-final"
 
 [project.scripts]
 auto-typing-final = "auto_typing_final.main:main"
+auto-typing-final-lsp-server = "auto_typing_final.lsp:main"
 
 [tool.uv]
 dev-dependencies = [
