--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -11,5 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - run: npm ci
       - run: npx vsce publish ${{ github.event.inputs.version }} --pat ${{ secrets.VSCODE_MARKETPLACE_TOKEN }} --packagePath ./dist/auto-typing-final.vsix
