--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+      - run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
       - run: npm ci
-      - run: npx @vscode/vsce publish ${{ github.event.inputs.version }} --pat ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
+      - run: npx @vscode/vsce publish --pat ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
