Change diagnostic severity from error to warning

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,14 @@
       "name": "Run Extension",
       "type": "extensionHost",
       "request": "launch",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
-      "outFiles": ["${workspaceFolder}/dist/*.js"]
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}",
+        "${workspaceFolder}/testing",
+        "${workspaceFolder}/testing/t.py"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/*.js"
+      ]
     }
   ]
 }
