--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
       ],
       "outFiles": [
         "${workspaceFolder}/dist/*.js"
-      ]
+      ],
+      "preLaunchTask": "npm: watch"
     }
   ]
 }
