--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,17 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Run Extension",
-      "type": "extensionHost",
-      "request": "launch",
-      "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}",
-        "${workspaceFolder}/testing",
-        "${workspaceFolder}/testing/t.py"
-      ],
-      "outFiles": [
-        "${workspaceFolder}/dist/*.js"
-      ],
-      "preLaunchTask": "npm: watch"
-    }
-  ]
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Run Extension",
+			"type": "extensionHost",
+			"request": "launch",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"${workspaceFolder}/testing",
+				"${workspaceFolder}/testing/t.py"
+			],
+			"outFiles": ["${workspaceFolder}/dist/*.js"],
+			"preLaunchTask": "npm: watch"
+		}
+	]
 }
