--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ env:
   DEFAULT_PYTHON_VERSION: "3.12"
 
 jobs:
-  check-types:
+  check-types-py:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
       - uses: extractions/setup-just@v2
       - run: just install check-types
 
-  lint:
+  lint-py:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
       - uses: extractions/setup-just@v2
       - run: just install lint
 
-  test:
+  test-py:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -66,3 +66,19 @@ jobs:
       - run: curl -LsSf https://astral.sh/uv/install.sh | sh
       - uses: extractions/setup-just@v2
       - run: just install test
+
+  check-types-ts:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - run: npm ci
+      - run: npm run compile
+
+  lint-ts:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - run: npm ci
+      - run: npm run lint
