--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
 	},
 	"scripts": {
 		"lint": "biome format --write .",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"vscode:prepublish": "npm run compile"
+		"compile": "webpack --mode development",
+		"watch": "webpack --mode development --watch",
+		"vscode:prepublish": "npm run package",
+		"package": "webpack --mode production --devtool hidden-source-map"
 	},
 	"dependencies": {
 		"vscode-languageclient": "^9.0.1"
@@ -54,6 +55,9 @@
 		"@types/node": "^20.14.10",
 		"@types/vscode": "^1.90.0",
 		"prettier": "^3.3.2",
-		"typescript": "^5.5.3"
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.5.3",
+		"webpack": "^5.92.1",
+		"webpack-cli": "^5.1.4"
 	}
 }
