--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,10 @@
 		{
 			"type": "npm",
 			"script": "watch",
-			"problemMatcher": "$tsc-watch",
+			"problemMatcher": [
+				"$ts-webpack-watch",
+				"$tslint-webpack-watch"
+			],
 			"isBackground": true,
 			"presentation": {
 				"reveal": "never"
