--- a/package.json
+++ b/package.json
@@ -9,26 +9,13 @@
 		"type": "git",
 		"url": "https://github.com/vrslev/auto-typing-final.git"
 	},
-	"keywords": [
-		"python",
-		"linting",
-		"mypy"
-	],
+	"keywords": ["python", "linting", "mypy"],
 	"engines": {
 		"vscode": "^1.90.0"
 	},
-	"categories": [
-		"Programming Languages",
-		"Linters",
-		"Formatters"
-	],
-	"extensionDependencies": [
-		"ms-python.python"
-	],
-	"activationEvents": [
-		"onLanguage:python",
-		"workspaceContains:*.py"
-	],
+	"categories": ["Programming Languages", "Linters", "Formatters"],
+	"extensionDependencies": ["ms-python.python"],
+	"activationEvents": ["onLanguage:python", "workspaceContains:*.py"],
 	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
@@ -42,10 +29,7 @@
 			"properties": {
 				"auto-typing-final.import-style": {
 					"default": "typing-final",
-					"enum": [
-						"typing-final",
-						"final"
-					],
+					"enum": ["typing-final", "final"],
 					"enumDescriptions": [
 						"Use `import typing` and `typing.Final`",
 						"Use `from typing import Final` and `Final`"
