--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
 	},
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome",
-		"editor.codeActionsOnSave": {"source.fixAll.ts": "never"}
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": "never"
+		}
 	},
 	"auto-typing-final.import-style": "final"
 }
