--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,7 @@
 		{
 			"type": "npm",
 			"script": "watch",
-			"problemMatcher": [
-				"$ts-webpack-watch",
-				"$tslint-webpack-watch"
-			],
+			"problemMatcher": ["$ts-webpack-watch", "$tslint-webpack-watch"],
 			"isBackground": true,
 			"presentation": {
 				"reveal": "never"
