--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"contributes": {
 		"commands": [
 			{
-				"title": "Restart Server",
+				"title": "Restart Servers",
 				"category": "auto-typing-final",
 				"command": "auto-typing-final.restart"
 			}
@@ -54,6 +54,7 @@
 		"@biomejs/biome": "1.8.3",
 		"@types/node": "^20.14.10",
 		"@types/vscode": "^1.90.0",
+		"@vscode/python-extension": "^1.0.5",
 		"prettier": "^3.3.2",
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.5.3",
