--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "auto-typing-final"
+description = "Automagically set typing.Final inside your functions"
 authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
 dependencies = ["ast-grep-py==0.27.3", "pygls==1.3.1"]
 requires-python = ">=3.10"
@@ -15,7 +16,7 @@ classifiers = [
 dynamic = ["version"]
 
 [project.urls]
-repository = "https://github.com/vrslev/auto-typing-final"
+Repository = "https://github.com/vrslev/auto-typing-final"
 
 [project.scripts]
 auto-typing-final = "auto_typing_final.main:main"
@@ -23,10 +24,10 @@ auto-typing-final-lsp-server = "auto_typing_final.lsp:main"
 
 [tool.uv]
 dev-dependencies = [
-    "mypy==1.10.0",
-    "pytest==8.2.2",
+    "mypy==1.11.2",
+    "pytest==8.3.3",
     "pytest-cov==5.0.0",
-    "ruff==0.4.10",
+    "ruff==0.6.8",
 ]
 
 [build-system]
