Use uv in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,22 +11,14 @@ concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-env:
-  DEFAULT_PYTHON_VERSION: "3.12"
-
 jobs:
   check-types-py:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ env.DEFAULT_PYTHON_VERSION }}
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/uv
-          key: check-types-${{ hashFiles('pyproject.toml') }}
-      - run: curl -LsSf https://astral.sh/uv/install.sh | sh
+          enable-cache: true
       - uses: extractions/setup-just@v2
       - run: just check-types
 
@@ -34,14 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ env.DEFAULT_PYTHON_VERSION }}
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/uv
-          key: lint-${{ hashFiles('pyproject.toml') }}
-      - run: curl -LsSf https://astral.sh/uv/install.sh | sh
+          enable-cache: true
       - uses: extractions/setup-just@v2
       - run: just lint
 
@@ -56,14 +43,10 @@ jobs:
           - "3.12"
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/uv
-          key: ${{ github.job }}-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
-      - run: curl -LsSf https://astral.sh/uv/install.sh | sh
+          enable-cache: true
+      - run: uv python install {{ matrix.python-version }}
       - uses: extractions/setup-just@v2
       - run: just test
 
@@ -72,13 +55,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - run: npm ci
-      - run: npm run compile
+      - run: just install-ts check-types-ts
 
   lint-ts:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - run: npm ci
-      - run: npm run lint
+      - run: just install-ts lint-ts
