--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          cache-dependency-glob: "**/pyproject.toml"
       - uses: extractions/setup-just@v2
       - run: just check-types
 
@@ -29,6 +30,7 @@ jobs:
       - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          cache-dependency-glob: "**/pyproject.toml"
       - uses: extractions/setup-just@v2
       - run: just lint
 
@@ -46,6 +48,7 @@ jobs:
       - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          cache-dependency-glob: "**/pyproject.toml"
       - run: uv python install {{ matrix.python-version }}
       - uses: extractions/setup-just@v2
       - run: just test
