--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,13 @@
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
-	"linter": { "enabled": false },
-	"formatter": { "ignore": ["package-lock.json"] }
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"recommended": true
+		}
+	},
+	"formatter": {
+		"ignore": ["package-lock.json"]
+	}
 }
