--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ line-length = 120
 [tool.ruff.lint]
 preview = true
 select = ["ALL"]
-ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001"]
+ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001", "FBT001"]
 extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG"] }
 
 [tool.pytest.ini_options]
