Update Justfile to upgrade dependencies and consolidate test files into test_transform_final.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ line-length = 120
 preview = true
 select = ["ALL"]
 ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001", "FBT001"]
-extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG"] }
+extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG", "PLR6301"] }
 
 [tool.pytest.ini_options]
 addopts = "--cov -s -vv"
