--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,8 @@ line-length = 120
 [tool.ruff.lint]
 preview = true
 select = ["ALL"]
-ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001"]
-extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG"] }
+ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001", "FBT001"]
+extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG", "PLR6301"] }
 
 [tool.pytest.ini_options]
 addopts = "--cov -s -vv"
